[gd_scene load_steps=29 format=2]

[ext_resource path="res://scripts/IdleScreen.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://sprites/frog_egg.png" type="Texture" id=3]
[ext_resource path="res://scripts/Time.gd" type="Script" id=4]
[ext_resource path="res://scripts/TamagotchiGame.gd" type="Script" id=5]
[ext_resource path="res://scripts/StatsMenu.gd" type="Script" id=6]
[ext_resource path="res://sprites/retry_icon.png" type="Texture" id=7]
[ext_resource path="res://sprites/data_icon.png" type="Texture" id=8]
[ext_resource path="res://sprites/save_icon.png" type="Texture" id=9]
[ext_resource path="res://sprites/food.png" type="Texture" id=10]
[ext_resource path="res://sprites/background_window.png" type="Texture" id=11]
[ext_resource path="res://sprites/select_button.png" type="Texture" id=12]
[ext_resource path="res://sprites/heart.png" type="Texture" id=13]
[ext_resource path="res://scripts/PlayerTamagotchi.gd" type="Script" id=14]
[ext_resource path="res://sprites/sad_face.png" type="Texture" id=15]
[ext_resource path="res://sprites/food_icon.png" type="Texture" id=16]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "age_0"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "age_1"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "age_2"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "age_3"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6 ]
}

[sub_resource type="Animation" id=6]
resource_name = "age_4"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 8 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "heart"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 0 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "sad"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 0 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "hunger"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 0 ]
}

[node name="TamagochiGame" type="Node"]
script = ExtResource( 5 )

[node name="UI" type="Node2D" parent="."]

[node name="Menu" type="Control" parent="UI"]
margin_right = 84.0
margin_bottom = 48.0
__meta__ = {
"_edit_lock_": true
}

[node name="MenuBackground" type="Sprite" parent="UI/Menu"]
position = Vector2( 42, 24 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="HBoxContainer" parent="UI/Menu"]
anchor_right = 0.16
anchor_bottom = 0.104
margin_left = 6.0
margin_top = 5.0
margin_right = 65.56
margin_bottom = 16.008
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 2 )
alignment = 1

[node name="StatsButton" type="TextureButton" parent="UI/Menu/VBoxContainer"]
margin_left = 1.0
margin_right = 17.0
margin_bottom = 16.0
focus_neighbour_left = NodePath("../SaveButton")
focus_neighbour_right = NodePath("../RunButton")
action_mode = 0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="RunButton" type="TextureButton" parent="UI/Menu/VBoxContainer"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 16.0
focus_neighbour_left = NodePath("../StatsButton")
focus_neighbour_right = NodePath("../FoodButton")
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 12 )

[node name="FoodButton" type="TextureButton" parent="UI/Menu/VBoxContainer"]
margin_left = 37.0
margin_right = 53.0
margin_bottom = 16.0
focus_neighbour_left = NodePath("../RunButton")
focus_neighbour_right = NodePath("../SaveButton")
texture_normal = ExtResource( 10 )
texture_focused = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="SaveButton" type="TextureButton" parent="UI/Menu/VBoxContainer"]
margin_left = 55.0
margin_right = 71.0
margin_bottom = 16.0
focus_neighbour_left = NodePath("../FoodButton")
focus_neighbour_right = NodePath("../StatsButton")
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Money" type="Label" parent="UI/Menu"]
margin_left = 5.0
margin_top = 34.0
margin_right = 35.0
margin_bottom = 44.0
theme = ExtResource( 2 )
text = "$0"

[node name="StatsMenu" type="Control" parent="UI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="MenuBackground" type="Sprite" parent="UI/StatsMenu"]
position = Vector2( 42, 24 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/StatsMenu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 45.0

[node name="Age" type="Label" parent="UI/StatsMenu/VBoxContainer"]
margin_right = 54.0
margin_bottom = 10.0
theme = ExtResource( 2 )
text = "Age: "
__meta__ = {
"_edit_lock_": true
}

[node name="Hunger" type="Label" parent="UI/StatsMenu/VBoxContainer"]
margin_top = 14.0
margin_right = 54.0
margin_bottom = 24.0
theme = ExtResource( 2 )
text = "Hunger: "
__meta__ = {
"_edit_lock_": true
}

[node name="Highscore" type="Label" parent="UI/StatsMenu/VBoxContainer"]
margin_top = 28.0
margin_right = 54.0
margin_bottom = 38.0
theme = ExtResource( 2 )
text = "Highscore: "
__meta__ = {
"_edit_lock_": true
}

[node name="IdleScreen" type="Control" parent="UI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="MenuBackground" type="Sprite" parent="UI/IdleScreen"]
position = Vector2( 42, 24 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Time" type="Label" parent="UI/IdleScreen"]
margin_left = 4.0
margin_top = 4.0
margin_right = 80.0
margin_bottom = 18.0
theme = ExtResource( 2 )
text = "00:00:00"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 43, 33 )
texture = ExtResource( 3 )
hframes = 10
script = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
autoplay = "age_0"
anims/RESET = SubResource( 1 )
anims/age_0 = SubResource( 2 )
anims/age_1 = SubResource( 4 )
anims/age_2 = SubResource( 3 )
anims/age_3 = SubResource( 5 )
anims/age_4 = SubResource( 6 )

[node name="Heart" type="Sprite" parent="Player"]
visible = false
position = Vector2( 11, -7 )
texture = ExtResource( 13 )
flip_h = true
hframes = 2

[node name="HeartAnimationPlayer" type="AnimationPlayer" parent="Player/Heart"]
anims/RESET = SubResource( 7 )
anims/heart = SubResource( 8 )

[node name="SadFace" type="Sprite" parent="Player"]
visible = false
position = Vector2( -10, -7 )
texture = ExtResource( 15 )
hframes = 2

[node name="SadFaceAnimationPlayer" type="AnimationPlayer" parent="Player/SadFace"]
anims/RESET = SubResource( 9 )
anims/sad = SubResource( 10 )

[node name="Hunger" type="Sprite" parent="Player"]
visible = false
position = Vector2( 10, -8 )
texture = ExtResource( 16 )
hframes = 2

[node name="HungerAnimationPlayer" type="AnimationPlayer" parent="Player/Hunger"]
anims/RESET = SubResource( 11 )
anims/hunger = SubResource( 12 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="pressed" from="UI/Menu/VBoxContainer/StatsButton" to="." method="_on_StatsButton_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/FoodButton" to="." method="_on_FoodButton_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="back_to_menu" from="UI/StatsMenu" to="." method="_on_back_to_menu"]
[connection signal="back_to_menu" from="UI/IdleScreen" to="." method="_on_back_to_menu"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
